# PassUp

./: .gitignore  Cargo.toml  README.md  chrome_config.toml  chrome_example.config.toml  kdbx_config.toml  nightwatch.conf.js  pass_config.toml  pwsafe_config.toml  setup.sh
scripts/: chess.com.js  github.com.js  lichess.js  lichess.org.js  myaccount.google.com.js  reddit.com.js
src/: chrome.rs  config.rs  kdbx.rs  keyring.rs  main.rs  pass.rs  passwsafe.rs  pwsafe.rs  utils.rs
